--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
   "name": "sleuth",
   "version": "0.0.0",
-  "description": "",
+  "description": "a command-line version of the Sleuth card game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Andrew Trautmann <atraut93@gmail.com>",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/atraut93/sleuthjs"
+  },
+  "bugs": {
+    "url": "https://github.com/atraut93/sleuthjs/issues"
+  },
+  "license": "ISC",
+  "dependencies": {
+    "inquirer": "^0.8.0"
+  }
 }
